--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "dependencies": {
         "connect": "3.x.x",
         "socket.io": "1.x.x",
-        "serve-static": "1.8.x",
+        "serve-static": "1.8.x"
     },
     "subdomain": "rts",
     "scripts": {
