--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
         "socket.io": "1.x.x",
         "serve-static": "1.8.x"
     },
+    "optionalDependencies" : {
+        "ink-docstrap": "0.5.x",
+        "jsdoc": ">=3.3.0-beta1",
+        "requirejs": "2.1.x"
+    },
     "subdomain": "rts",
     "scripts": {
         "start": "node server/server.js"
