--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
     "name": "ephemeris",
-    "version": "0.0.1",
+    "version": "0.0.1-1",
     "dependencies": {
         "connect": "3.x.x",
         "socket.io": "1.x.x",
         "serve-static": "1.8.x"
     },
-    "optionalDependencies" : {
+    "optionalDependencies": {
         "ink-docstrap": "0.5.x",
         "jsdoc": ">=3.3.0-beta1",
         "requirejs": "2.1.x"
