--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
     "name": "ephemeris",
     "version": "0.0.1-1",
     "dependencies": {
+        "body-parser": "^1.12.0",
         "compression": "1.4.x",
         "express": "4.x.x",
-        "socket.io": "1.x.x",
+        "multer": "0.1.x",
+        "node-uuid": "1.x.x",
         "serve-static": "1.8.x",
-        "node-uuid": "1.x.x"
+        "socket.io": "1.x.x"
     },
     "optionalDependencies": {
         "ink-docstrap": "0.5.x",
