--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
-    "name": "ephemeris",
-    "version": "0.0.1-1",
-    "dependencies": {
-        "body-parser": "^1.12.0",
-        "compression": "1.4.x",
-        "express": "4.x.x",
-        "multer": "0.1.x",
-        "node-uuid": "1.x.x",
-        "serve-static": "1.8.x",
-        "socket.io": "1.x.x"
-    },
-    "optionalDependencies": {
-        "ink-docstrap": "0.5.x",
-        "jsdoc": ">=3.3.0-beta1",
-        "requirejs": "2.1.x"
-    },
-    "subdomain": "ephemeris",
-    "scripts": {
-        "start": "node server/server.js"
-    },
-    "engines": {
-        "node": "0.10.x"
-    }
+  "name": "ephemeris",
+  "version": "0.0.1-1",
+  "dependencies": {
+    "body-parser": "^1.12.0",
+    "compression": "^1.4.1",
+    "ejs": "^2.3.1",
+    "express": "^4.12.0",
+    "multer": "^0.1.8",
+    "node-uuid": "^1.4.2",
+    "serve-static": "^1.8.1",
+    "socket.io": "^1.3.4"
+  },
+  "optionalDependencies": {
+    "ink-docstrap": "^0.5.2",
+    "jsdoc": "^3.3.0-beta1",
+    "requirejs": "^2.1.16"
+  },
+  "subdomain": "ephemeris",
+  "scripts": {
+    "start": "node server/server.js"
+  },
+  "engines": {
+    "node": "0.10.x"
+  }
 }
